# BattleShip

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
client/include/: client.hpp
client/src/: client.cpp  main.cpp
include/: dotenv.h
protocol/include/: game_logic.hpp  phase_state.hpp  protocol.hpp
protocol/src/: game_logic.cpp  phase_state.cpp  protocol.cpp
protocol/test/: game_logic_test.cpp  phase_state_test.cpp  protocol_test.cpp
server/include/: server.hpp
server/logs/: server
server/src/: main.cpp  server.cpp
